--- a/app/views/home/show_professor.html.erb
+++ b/app/views/home/show_professor.html.erb
@@ -1,27 +1,22 @@
-<p id="notice"><%= notice %></p>
-
-    <div class="container">
-
-
-        <h2 class="title">Lista de profesores</h2>
-
-      <div class="cards">
-
-      <% @professors.each do |professor| %>
-
-
-
-        <div class="card">
-          <div class="card__inner">
-            <i class="fa fa-user-tie"></i>
-            <p><%= professor.name %> <%= professor.father_last_name %> <%= professor.mother_last_name %></p>
-            <%= link_to professor_path(professor) do %>
-              <i class="btn fas fa-info-circle fa-sm" aria-hidden="true"></i>
-            <%end%>
-          </div>
-        </div>
-
-      <%end%>
-      </div>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <h2 class="title">Lista de profesores</h2>
+    <div class="search-bar">
+      <%= form_tag(show_professor_path, method: :get) do %>
+        <%= text_field_tag :search %>
+        <%= submit_tag "Buscar",:class=>"btn btn-outline-secondary" %>
+      <% end %>
     </div>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <div class="cards">
+    <% @professors.each do |professor| %>
+        <div class="card">
+         <%= link_to professor_path(professor) do %>
+            <div class="card__inner">
+              <i class="fa fa-user-tie"></i>
+              <p><%= professor.name %> <%= professor.father_last_name %> <%= professor.mother_last_name %></p>
+            </div>
+          <%end%>
+        </div>
+    <%end%>
+  </div>
+</div>
