--- a/app/views/home/show_professor.html.erb
+++ b/app/views/home/show_professor.html.erb
@@ -4,19 +4,14 @@
     <div class="search-bar">
       <%= form_tag(show_professor_path, method: :get) do %>
         <%= text_field_tag :search %>
+        <%= select_tag :professor_type,"<option>All</option><option>Catedra</option><option>Planta</option>".html_safe %>
         <%= submit_tag "Buscar",:class=>"btn btn-outline-secondary" %>
       <% end %>
     </div>
-    <%= form_tag(show_professor_path, method: :get) do %>
-      <p>
-        <%= select_tag :search,"<option>Catedra</option><option>Planta</option>".html_safe %>
-        <%= submit_tag "Buscar",:class=>"btn btn-outline-secondary" %>
-     </p>
-    <% end %>
   <div class="cards">
     <% @professors.each do |professor| %>
         <div class="card">
-         <%= link_to professor_path(professor) do %>
+         <%= link_to home_professors_path(professor.id) do %>
             <div class="card__inner">
               <i class="fa fa-user-tie"></i>
               <p><%= professor.name %> <%= professor.father_last_name %> <%= professor.mother_last_name %></p>
