--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -8,6 +8,7 @@
         <th class="text-center table-hidde">Email</th>
         <th class="text-center table-hidde">Oficina</th>
         <th class="text-center table-hidde">Resumen</th>
+        <th class="text-center table-hidde">Tipo</th>
         <th colspan="3" class="text-center">Acciones</th>
       </tr>
     </thead>
@@ -18,6 +19,7 @@
           <td class="text-center table-hidde"><%= professor.email %></td>
           <td class="text-center table-hidde"><%= professor.office %></td>
           <td class="text-center table-hidde"><%= professor.resume %></td>
+          <td class="text-center table-hidde"><%= professor.professor_type %></td>
           <td class="text-center">
             <%= link_to professor do %>
               <i class="btn fas fa-eye fa-sm text-primary" aria-hidden="true"></i>
