skeleton for sprint

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-4 col-sm-4">
             <i class="fas fa-users icon-p"></i>
-            <h3>Profesores</h3>
+            <h3><%= link_to 'Profesores', show_professor_path %></h3>
             <p>En esta sección encontraras toda información de los profesores que pertenecen al departamento.</p>
         </div>
         <div class="col-md-4 col-sm-4">
