--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,8 @@
                 <% end %>
                 <% if !current_user.present? %>
                   <li><%= link_to 'Profesor', show_professor_path %></li>
+                  <li><%= link_to 'Course', show_course_path %></li>
+                  <li><%= link_to 'Link', show_link_path %></li>
                   <li><%= link_to 'Iniciar Sesión', new_user_session_url %></li>
                 <% else %>
                   <li><%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, :class => 'navbar-link'%></li>
