--- a/app/views/home/show_course.html.erb
+++ b/app/views/home/show_course.html.erb
@@ -9,7 +9,7 @@
       <% end %>
     </div>
   <div class="cards">
-    <% @courses.each do |courses| %>
+    <% @courses.each do |course| %>
         <div class="card">
          <%= link_to home_courses_path(course.id) do %>
             <div class="card__inner">
