Se cambiaron los iconos

--- a/app/views/home/show_course.html.erb
+++ b/app/views/home/show_course.html.erb
@@ -13,7 +13,7 @@
         <div class="card">
          <%= link_to home_courses_path(course.id) do %>
             <div class="card__inner">
-              <i class="fa fa-user-tie"></i>
+              <i class="fas fa-book"></i>
               <p><%= course.name %></p>
             </div>
           <%end%>
