--- a/app/views/home/show_link.html.erb
+++ b/app/views/home/show_link.html.erb
@@ -13,7 +13,7 @@
         <div class="card">
          <%= link_to home_links_path(link.id) do %>
             <div class="card__inner">
-              <i class="fa fa-user-tie"></i>
+              <i class="fas fa-project-diagram"></i>
               <p><%= link.name %></p>
             </div>
           <%end%>
