--- a/app/views/home/show_course.html.erb
+++ b/app/views/home/show_course.html.erb
@@ -4,7 +4,7 @@
     <div class="search-bar">
       <%= form_tag(show_course_path, method: :get) do %>
         <%= text_field_tag :search %>
-        <%= select_tag :status,"<option>Activo</option><option>No activo</option>".html_safe %>
+        <%= select_tag :status,"<option>Todos</option><option>Activo</option><option>No activo</option>".html_safe %>
         <%= submit_tag "Buscar",:class=>"btn btn-outline-secondary" %>
       <% end %>
     </div>
