--- a/app/views/home/show_professor.html.erb
+++ b/app/views/home/show_professor.html.erb
@@ -4,7 +4,7 @@
     <div class="search-bar">
       <%= form_tag(show_professor_path, method: :get) do %>
         <%= text_field_tag :search %>
-        <%= select_tag :professor_type,"<option>All</option><option>Catedra</option><option>Planta</option>".html_safe %>
+        <%= select_tag :professor_type,"<option>Todos</option><option>Catedra</option><option>Planta</option>".html_safe %>
         <%= submit_tag "Buscar",:class=>"btn btn-outline-secondary" %>
       <% end %>
     </div>
