--- a/app/views/home/show_course.html.erb
+++ b/app/views/home/show_course.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
-  <h2 class="title">Lista de cursos</h2>
+  <h2 class="title">Lista de Materias</h2>
     <div class="search-bar">
       <%= form_tag(show_course_path, method: :get) do %>
         <%= text_field_tag :search %>
