Carga anuncions e informacion de profesores

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -356,7 +356,7 @@ section {
 .comment {
   position:relative; 
   margin:2rem 2rem 2rem 2rem;
-  background-color:#EEE; 
+  background-color:#e3eeff; 
   border:2px solid #AAA; 
   -webkit-border-radius:0.25rem; 
   -moz-border-radius:0.25rem; 
