Mensaje de error

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -372,3 +372,9 @@ section {
 .comment p {
   margin:0.5rem 0.5rem 0.5rem 2rem;
 }
+
+.find_error_message{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
