--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,13 +17,13 @@
         </div>
         <div class="col-md-4 col-sm-4">
             <i class="fas fa-book-reader icon-p"></i>
-            <h3>Materias</h3>
+            <h3><%= link_to 'Materias', show_course_path %></h3>
             <p>En esta sección encontraras toda la información que referente a las materias que ofrece el
                 departamento.</p>
         </div>
         <div class="col-md-4 col-sm-4">
             <i class="fas fa-suitcase icon-p"></i>
-            <h3>Vinculaciones</h3>
+            <h3><%= link_to 'Vinculaciones', show_link_path %></h3>
             <p>En esta sección encontraras todas las vinculaciones y proyectos que el departamento tiene tanto
                 internas como externas.</p>
         </div>
