--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,7 +36,7 @@
         <div class="row" style="height: 300px; overflow-y: scroll;">
             <% @announcements.each do |announcement| %>
                 <div class="comment">
-                    <div class="username"><%= announcement.professor.name%><%= announcement.professor.father_last_name%><%= announcement.professor.mother_last_name%>  -- <%= announcement.date.strftime("%d-%m-%Y %I:%M")%></div>
+                    <div class="username"><%= announcement.professor.name%> <%= announcement.professor.father_last_name%> <%= announcement.professor.mother_last_name%> ~ <%= announcement.date.strftime("%d/%m/%Y %I:%M")%></div>
                     <p><%= announcement.description%></p>
                 </div>
             <% end %>
