Fix language in pagination

--- a/app/views/home/show_announcement.html.erb
+++ b/app/views/home/show_announcement.html.erb
@@ -7,5 +7,5 @@
             <p><%= announcement.description%></p>
         </div>
     <% end %>
-    <%= will_paginate @announcements %>
+    <%= will_paginate @announcements, :previous_label => 'Anterior', :next_label => 'Siguiente' %>
 </div>
