--- a/app/views/home/show_announcement.html.erb
+++ b/app/views/home/show_announcement.html.erb
@@ -1,6 +1,11 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
   <h2 class="title">Lista de Anuncios</h2>
+  <% if @announcements.count == 0 %>
+    <div>
+      <p class="find_error_message">No hay anuncios.</p>
+    </div>
+  <% end %>
     <% @announcements.each do |announcement| %>
         <div class="comment">
             <div class="username"><%= announcement.professor.name%><%= announcement.professor.father_last_name%><%= announcement.professor.mother_last_name%>  -- <%= announcement.date.strftime("%d-%m-%Y %I:%M")%></div>
