--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
                   <span class="icon-bar"></span>
               </button>
               <a href="/"><img class="navbar-brand" src="http://admision.itesm.mx/sites/all/themes/admision/images/area-estudio/logo-tec-blanco.png"></a>
-              <a class="navbar-brand" href="/">Departamento de Computación</a>
+              <a id="departamento_titulo" class="navbar-brand" href="/">Departamento de Computación</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
