Add link click and verification to documents and links

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -9,7 +9,7 @@
 
   <p class="text-center">
     <strong>URL:</strong>
-    <%= @document.url %>
+    <%= link_to nil, "http://#{@document.url}"%>
   </p>
 
    <p class="text-center">
