--- a/app/views/home/links.html.erb
+++ b/app/views/home/links.html.erb
@@ -29,7 +29,7 @@
 
   <p class="text-center">
     <strong>URL:</strong>
-    <%= @link.url %>
+    <%= link_to nil, "http://#{@link.url}"%>
   </p>
 
   <p class="text-center">
