--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -16,7 +16,7 @@
       <% @documents.each do |document| %>
         <tr>
           <td class="text-center"><%= document.description %></td>
-          <td class="text-center"><%= document.url %></td>
+          <td class="text-center"><%= link_to nil, "http://#{document.url}"%></td>
           <td class="text-center">
             <%= link_to document do %>
               <i class="btn fas fa-eye fa-sm text-primary" aria-hidden="true"></i>
