--- a/app/views/home/professors.html.erb
+++ b/app/views/home/professors.html.erb
@@ -50,7 +50,8 @@
           <% @professor.documents.each do |document| %>
             <tr>
               <td class="text-center"><%= document.description %></td>
-              <td class="text-center"><%= document.url %></td>
+              <td class="text-center"><%= link_to nil, "http://#{document.url}"%> </td>
+              
             </tr>
           <% end %>
         </tbody>
