--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -34,7 +34,7 @@
 
   <p class="text-center">
     <strong>URL:</strong>
-    <%= @link.url %>
+    <%= link_to nil, "http://#{@link.url}"%>
   </p>
 
   <p class="text-center">
