--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -29,7 +29,7 @@
 
   <p class="text-center">
     <strong>CV:</strong>
-    <%= @professor.resume %>
+    <%= link_to nil, "http://#{@professor.resume}"%>
   </p>
 
   <p class="text-center">
