--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -34,7 +34,9 @@
 
   <p class="text-center">
     <strong>URL:</strong>
-    <%= link_to nil, "http://#{@link.url}"%>
+    <% unless @link.url.blank? %>
+      <%= link_to nil, "http://#{@link.url}"%>
+    <% end %>
   </p>
 
   <p class="text-center">
